update java-runtime.md